<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayoutData"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    tools:context=".activities.ZipCodeInfoActivity">

    <TextView
        android:padding="3dip"
        android:id="@+id/cityName"
        android:text="@string/city_name_text" />
    <TextView
        android:padding="3dip"
        android:id="@+id/currentTemp"
        android:text="@string/current_temp_text" />
    <ImageView
        android:padding="3dip"
        android:id="@+id/imgForecast"/>

    <TableRow android:background="@drawable/border">

        <TextView
            android:background="@drawable/border"
            android:padding="3dip"
            android:text="@string/wind_label" />

        <TextView
            android:id="@+id/windInfo"
            android:background="@drawable/border"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/current_wind" />
    </TableRow>

    <TableRow android:background="@drawable/border">

        <TextView
            android:background="@drawable/border"
            android:padding="3dip"
            android:text="@string/cloudiness_label" />

        <TextView
            android:id="@+id/cloudinessInfo"
            android:background="@drawable/border"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/current_cloudiness" />
    </TableRow>

    <TableRow android:background="@drawable/border">

        <TextView
            android:background="@drawable/border"
            android:padding="3dip"
            android:text="@string/pressure_label" />

        <TextView
            android:id="@+id/pressureInfo"
            android:background="@drawable/border"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/current_pressure" />
    </TableRow>

    <TableRow android:background="@drawable/border">

        <TextView
            android:background="@drawable/border"
            android:padding="3dip"
            android:text="@string/humidity_label" />

        <TextView
            android:id="@+id/humidityInfo"
            android:background="@drawable/border"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/current_humidity" />
    </TableRow>

    <TableRow android:background="@drawable/border">

        <TextView
            android:background="@drawable/border"
            android:padding="3dip"
            android:text="@string/sunrise_label" />

        <TextView
            android:id="@+id/sunriseInfo"
            android:background="@drawable/border"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/current_sunrise" />
    </TableRow>

    <TableRow android:background="@drawable/border">

        <TextView
            android:background="@drawable/border"
            android:padding="3dip"
            android:text="@string/sunset_label" />

        <TextView
            android:id="@+id/sunsetInfo"
            android:background="@drawable/border"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/current_sunset" />
    </TableRow>
</TableLayout>